# vulners-agent

./: .gitignore  LICENSE  README.md  __init__.py  agent.py  application.py  pyproject.toml  requirements.txt
app/: __init__.py  migration.py  scanner.py  ticker.py
common/: __init__.py  configreader.py  extargparse.py  modloader.py  oscommands.py  osdetect.py  path.py  stringops.py  vulnersagent.py  winutils.py
conf/: vulners.conf
config/: crontab  logrotate.conf  vulners_agent.conf
misc/: vulners_cron
scanModules/: centosDetect.py  nixDetect.py  osDetect.py
